Optimize performance and clean up code
Signed-off-by: Ivan Kavaldzhiev <ivankavaldzhiev@gmail.com>